# retail-unified-commerce

./: .gitignore  Dockerfile.frontend  README-demo.md  README.md  docker-compose.yml  makefile  unified_commerce_readme.md
backend/: .env.example  _timeseries_coll_creator.py  _vector_search_idx_creator.py  main.py  pyproject.toml
backend/advanced-search-ms/: .dockerignore  .env.example  Dockerfile  README.md  THIRD-PARTY-NOTICES  main.py  pyproject.toml
backend/advanced-search-ms/app/application/: ports.py
backend/advanced-search-ms/app/application/use_cases/: atlas_text_search_use_case.py  base.py  hybrid_rrf_use_case.py  keyword_search_use_case.py  vector_search_rerank_use_case.py  vector_search_use_case.py
backend/advanced-search-ms/app/domain/: product.py
backend/advanced-search-ms/app/infrastructure/mongodb/: client.py  search_repository.py  utils.py
backend/advanced-search-ms/app/infrastructure/mongodb/pipelines/: __init__.py  hybrid_rrf_pipeline.py  keyword_pipeline.py  text_pipeline.py  vector_pipeline.py
backend/advanced-search-ms/app/infrastructure/voyage_ai/: client.py
backend/advanced-search-ms/app/interfaces/: routes.py  schemas.py
backend/advanced-search-ms/app/shared/: config.py  dependencies.py  exceptions.py
backend/bedrock/: anthropic_chat_completions.py  client.py  cohere_embeddings.py
backend/config/: config.json  config_loader.py
backend/db/: mdb.py
backend/vogayeai/: vogaye_ai_embeddings.py
frontend/: .dockerignore  .example.env  .gitignore  Dockerfile  LICENSE  README.md  THIRD-PARTY-NOTICES.md  env.local  next.config.mjs  (+3 more)
(+69 files in other folders)
